--- a/projekt.css
+++ b/projekt.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url(../ProjektHemsida/running.jpg);                 
+    background-image:url(../Website/running.jpg);                 
     background-repeat:   no-repeat;
     background-attachment: fixed;
     background-size: 100%;
