--- a/projekt.css
+++ b/projekt.css
@@ -220,7 +220,7 @@ margin-top: 15%;
   height: 430px;
   background: #fafafa;
   box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
-margin-top: 5%;
+margin-top: 3%;
 }
 
 #MyRegForm input {
@@ -241,7 +241,7 @@ margin-top: 5%;
   border-bottom: 2px solid #4a89dc;
 }
 
-button {
+.button {
   margin: 50px 0;
   width: 315px;
   height: 46px;
