--- a/projekt.css
+++ b/projekt.css
@@ -3,67 +3,10 @@ body {
     background-repeat:   no-repeat;
     background-attachment: fixed;
     background-size: 100%;
+    text-align: center;
+}
 
-}
-.Startsida {
-    position: relative;
-    color: white;
-    font-family:sans-serif;
-}
-.h1
-{
-  position: absolute;
-  text-align: center;
-}
-head {
-    position: absolute;
-    top: 5px;
-    color: white;
-    font-size: 100px;
-}
-#Först {
-    font-size: 50px;
-    color: white;
-    text-align: center;
-}
-#Mitten {
-    font-size: 100px;
-    color: white;
-    text-align: center;
-}
-#Sist {
-    font-size: 30px;
-    color: white;
-    text-align: center;
-}
-table {
-    border-collapse: collapse;
-
-}
-table, th, td {
-   border: 2px solid white;
-    text-align: left;
-}
 .button  {
-     background:  transparent;
-     height:  38px;
-     line-height:  40px;
-     border:  2px solid white;
-     display:  inline-block;
-     float:  none;
-     text-align:  center;
-     width:  160px;
-     padding:  0px!important;
-     font-size:  14px;
-     color:  #fff;
- }
-
-.button:hover  {
-     color:  #fff;
-     background:  rgba(255, 255, 255, 0.2);
- }
-
-.buttonstart1  {
      background:  transparent;
      height:  38px;
      line-height:  40px;
@@ -79,32 +22,31 @@ table, th, td {
     left: 450px;
     top: 370px;
  }
-
-.buttonstart1:hover  {
+ 
+.button:hover  {
      color:  #fff;
      background:  rgba(255, 255, 255, 0.2);
  }
-.buttonstart2  {
-     background:  transparent;
-     height:  38px;
-     line-height:  40px;
-     border:  2px solid white;
-     display:  inline-block;
-     float:  none;
-     text-align:  center;
-     width:  160px;
-     padding:  0px!important;
-     font-size:  14px;
-     color:  #fff;
-       position: absolute;
-    left: 650px;
-    top: 370px;
- }
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
 
-.buttonstart2:hover  {
-     color:  #fff;
-     background:  rgba(255, 255, 255, 0.2);
- }
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+.container a:hover, .dropdown:hover .dropbtn {
+       color:  #fff;
+     background:  rgba(255, 255, 255, 0.0);
+        color: darkorange;
+}
+
+
+tr:hover{
+    background-color:#f5f5f5
+}
 .container {
     position: absolute;
     top: 4px;
@@ -112,9 +54,9 @@ table, th, td {
     overflow: hidden;
     background-color: gba(255, 255, 255, 0.2);
     font-family: Arial;
-
+ 
 }
-
+ 
 .container a {
     float: left;
     font-size: 16px;
@@ -122,148 +64,8 @@ table, th, td {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-}
-
-.container a:hover, .dropdown:hover .dropbtn {
-       color:  #fff;
-     background:  rgba(255, 255, 255, 0.0);
-        color: darkorange;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
+ 
 }
 
 
-#FormLogin {
-  margin: 0 auto;
-  padding: 20px 0 0 0;
-  text-align: center;
-  width: 380px;
-  height: 280px;
-  background: #fafafa;
-  box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
-margin-top: 15%;
-}
 
-#FormLogin input {
-  display: block;
-  background: transparent;
-  margin: 0 auto;
-  border-style: none;
-  border-bottom: 1px solid #454545;
-  font-size: 15px;
-  padding: 20px 20px 20px 5px;
-}
-
-#FormLogin input:nth-child(2) {
-  margin: 20px auto 0 auto;
-}
-
-#Login input:focus {
-  border-bottom: 2px solid #4a89dc;
-}
-
-#MyRegForm {
-  margin: 0 auto;
-  padding: 20px 0 0 0;
-  text-align: center;
-  width: 380px;
-  height: 430px;
-  background: #fafafa;
-  box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
-margin-top: 3%;
-}
-
-#MyRegForm input {
-  display: block;
-  background: transparent;
-  margin: 0 auto;
-  border-style: none;
-  border-bottom: 1px solid #454545;
-  font-size: 22px;
-  padding: 10px 10px 10px 5px;
-}
-
-#MyRegForm input:nth-child(2) {
-  margin: 20px auto 0 auto;
-}
-
-#MyRegForm input:focus {
-  border-bottom: 2px solid #4a89dc;
-}
-
-.button {
-  margin: 50px 0;
-  width: 315px;
-  height: 46px;
-  text-align: center;
-  padding: 8px 0 8px 8;
-  background: #4a89dc;
-  color: #eee;
-  font-size: 22px;
-  border-style: none;
-  border-bottom: 3px solid #3160B6;
-  transition: all .2s linear;
-}
-button:hover {
-  background: #357bd8;
-}
-
-p {
-  margin: -5px 0;
-  color: #636363;
-}
-
-a {
-  color: #357bd8;
-  text-decoration: none;
-}
-
-footer {
-  margin: 170px 0 0 0;
-  text-align: center;
-}
-.booking {
-    border-style: inset;
-    border-width: medium;
-    color: white;
-    
-}
