--- a/projekt.css
+++ b/projekt.css
@@ -4,6 +4,7 @@ body {
     background-attachment: fixed;
     background-size: 100%;
     text-align: center;
+    font-family: sans-serif;
 }
 
 .button  {
@@ -30,6 +31,7 @@ body {
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-top: 5%;
 }
 
 th, td {
