--- a/projekt.css
+++ b/projekt.css
@@ -53,7 +53,7 @@ tr:hover{
 .container {
     position: absolute;
     top: 4px;
-    right: 16px;
+    left: 16px;
     overflow: hidden;
     background-color: gba(255, 255, 255, 0.2);
     font-family: Arial;
