--- a/projekt.css
+++ b/projekt.css
@@ -5,6 +5,9 @@ body {
     background-size: 100%;
     text-align: center;
     font-family: sans-serif;
+    background-position: 50% 50%;
+    background-size: cover;
+
 }
 
 .button  {
