--- a/projekt.css
+++ b/projekt.css
@@ -73,3 +73,15 @@ tr:hover{
 form {
     margin-top: 10%;
 }
+.profile {
+    
+    text-align: left;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    color:black;
+    background-color: white;
+    opacity: 0.7;
+    border-style:groove;
+}
