--- a/projekt.css
+++ b/projekt.css
@@ -22,14 +22,14 @@ body {
      background:  transparent;
      height:  38px;
      line-height:  40px;
-     border:  2px solid white;
+     border:  2px solid orange;
      display:  inline-block;
      float:  none;
      text-align:  center;
      width:  160px;
      padding:  0px!important;
      font-size:  14px;
-     color:  #fff;
+     color: orange;
 
  }
 
@@ -79,7 +79,13 @@ tr:hover{
 
 }
 form {
-    margin-top: 10%;
+    margin-top: 7%;
+    background-color: white;
+    opacity: 0.7;
+    border-style: groove;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 }
 .profile {
     
