--- a/projekt.css
+++ b/projekt.css
@@ -88,8 +88,28 @@ form {
     margin-right: auto;
     width: 25%;
 }
+/*.terms_form
+{
+  margin-top: 5%;
+  background-color: white;
+  opacity: 0.7;
+  border-style: groove;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}*/
+#terms_form
+{
+  margin-top: 5%;
+  background-color: white;
+  opacity: 0.7;
+  border-style: groove;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 .profile {
-    
+
     text-align: left;
     width: 25%;
     margin-left: auto;
