--- a/projekt.css
+++ b/projekt.css
@@ -9,6 +9,10 @@ body {
     background-size: cover;
 
 }
+.instruc_h1
+{
+  margin-top: 5%;
+}
 #Först{
     font-size: 50px;
 }
@@ -88,16 +92,6 @@ form {
     margin-right: auto;
     width: 25%;
 }
-/*.terms_form
-{
-  margin-top: 5%;
-  background-color: white;
-  opacity: 0.7;
-  border-style: groove;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}*/
 #terms_form
 {
   margin-top: 5%;
